# patentrag

./: README.md
.github/workflows/: ci-backend.yml  ci-frontend.yml
backend/: Cargo.toml  dump.rdb  test.txt
backend/src/: api.rs  chunker.rs  db.rs  embedder.rs  ingest.rs  main.rs  rag.rs  search.rs
data/: 01-create-chunks.sql  02-add-embeddings-column.sql  docker-compose.yml
