[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
lopdf = "0.26"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }   # for HTTP calls
serde = { version = "1.0", features = ["derive"] }                # for JSON deserialization
serde_json = "1.0"

