[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
lopdf = "0.26"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.23", features = ["aio", "tokio-comp"] }
sha2 = "0.10"
hex = "0.4"
axum = "0.7"
tower = "0.4"
